...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sccreens.main.MainActivity"
    android:background="@color/colorBlack"
    android:id="@+id/mainLayout">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <android.support.v7.widget.RecyclerView
        android:paddingTop="16dp"
        android:id="@+id/rvMovies"
        android:layout_width="395dp"
...
